--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: CodeUtilities-Bot
-        path: ./build/libs/new-codeutils-bot*.jar
+        name: AstronoBot
+        path: ./build/libs/AstronoBot*.jar
